corpus/kernel/6.17/dev-tools/index.md
---
collection: kernel
version: "6.17"
title: "Development tools for the kernel"
source_url: https://www.kernel.org/doc/html/v6.17/dev-tools/index.html
fetched_at: 2026-09-16T16:17:42+00:00
---
English

- [Chinese (Simplified)](../translations/zh_CN/dev-tools/index.md)
- [Chinese (Traditional)](../translations/zh_TW/dev-tools/index.md)
- [Italian](../translations/it_IT/dev-tools/index.md)

# Development tools for the kernel

This document is a collection of documents about development tools that can
be used to work on the kernel. For now, the documents have been pulled
together without any significant effort to integrate them into a coherent
whole; patches welcome!

A brief overview of testing-specific tools can be found in
[Kernel Testing Guide](testing-overview.md)

Tools that are specific to debugging can be found in
[Debugging advice for Linux Kernel developers](../process/debugging/index.md)

Table of contents

- [Kernel Testing Guide](testing-overview.md)
  - [Writing and Running Tests](testing-overview.md#writing-and-running-tests)
  - [Code Coverage Tools](testing-overview.md#code-coverage-tools)
  - [Dynamic Analysis Tools](testing-overview.md#dynamic-analysis-tools)
  - [Static Analysis Tools](testing-overview.md#static-analysis-tools)
- [Checkpatch](checkpatch.md)
  - [Options](checkpatch.md#options)
  - [Message Levels](checkpatch.md#message-levels)
  - [Type Descriptions](checkpatch.md#type-descriptions)
- [clang-format](clang-format.md)
  - [Review files and patches for coding style](clang-format.md#review-files-and-patches-for-coding-style)
  - [Reformatting blocks of code](clang-format.md#reformatting-blocks-of-code)
  - [Missing support](clang-format.md#missing-support)
  - [Extra features/options](clang-format.md#extra-features-options)
- [Coccinelle](coccinelle.md)
  - [Getting Coccinelle](coccinelle.md#getting-coccinelle)
  - [Supplemental documentation](coccinelle.md#supplemental-documentation)
  - [Using Coccinelle on the Linux kernel](coccinelle.md#using-coccinelle-on-the-linux-kernel)
  - [Coccinelle parallelization](coccinelle.md#coccinelle-parallelization)
  - [Using Coccinelle with a single semantic patch](coccinelle.md#using-coccinelle-with-a-single-semantic-patch)
  - [Controlling Which Files are Processed by Coccinelle](coccinelle.md#controlling-which-files-are-processed-by-coccinelle)
  - [Debugging Coccinelle SmPL patches](coccinelle.md#debugging-coccinelle-smpl-patches)
  - [.cocciconfig support](coccinelle.md#cocciconfig-support)
  - [Additional flags](coccinelle.md#additional-flags)
  - [SmPL patch specific options](coccinelle.md#smpl-patch-specific-options)
  - [SmPL patch Coccinelle requirements](coccinelle.md#smpl-patch-coccinelle-requirements)
  - [Proposing new semantic patches](coccinelle.md#proposing-new-semantic-patches)
  - [Detailed description of the `report` mode](coccinelle.md#detailed-description-of-the-report-mode)
  - [Detailed description of the `patch` mode](coccinelle.md#detailed-description-of-the-patch-mode)
  - [Detailed description of the `context` mode](coccinelle.md#detailed-description-of-the-context-mode)
  - [Detailed description of the `org` mode](coccinelle.md#detailed-description-of-the-org-mode)
- [Sparse](sparse.md)
  - [Using sparse for typechecking](sparse.md#using-sparse-for-typechecking)
  - [Using sparse for lock checking](sparse.md#using-sparse-for-lock-checking)
  - [Getting sparse](sparse.md#getting-sparse)
  - [Using sparse](sparse.md#using-sparse)
- [KCOV: code coverage for fuzzing](kcov.md)
  - [Prerequisites](kcov.md#prerequisites)
  - [Coverage collection](kcov.md#coverage-collection)
  - [Comparison operands collection](kcov.md#comparison-operands-collection)
  - [Remote coverage collection](kcov.md#remote-coverage-collection)
- [Using gcov with the Linux kernel](gcov.md)
  - [Preparation](gcov.md#preparation)
  - [Customization](gcov.md#customization)
  - [Module specific configs](gcov.md#module-specific-configs)
  - [Files](gcov.md#files)
  - [Modules](gcov.md#modules)
  - [Separated build and test machines](gcov.md#separated-build-and-test-machines)
  - [Note on compilers](gcov.md#note-on-compilers)
  - [Troubleshooting](gcov.md#troubleshooting)
  - [Appendix A: gather_on_build.sh](gcov.md#appendix-a-gather-on-build-sh)
  - [Appendix B: gather_on_test.sh](gcov.md#appendix-b-gather-on-test-sh)
- [Kernel Address Sanitizer (KASAN)](kasan.md)
  - [Overview](kasan.md#overview)
  - [Support](kasan.md#support)
  - [Usage](kasan.md#usage)
  - [Implementation details](kasan.md#implementation-details)
  - [Shadow memory](kasan.md#shadow-memory)
  - [For developers](kasan.md#for-developers)
- [Kernel Memory Sanitizer (KMSAN)](kmsan.md)
  - [Usage](kmsan.md#usage)
  - [Support](kmsan.md#support)
  - [How KMSAN works](kmsan.md#how-kmsan-works)
  - [References](kmsan.md#references)
- [Undefined Behavior Sanitizer - UBSAN](ubsan.md)
  - [Report example](ubsan.md#report-example)
  - [Usage](ubsan.md#usage)
  - [References](ubsan.md#references)
- [Kernel Memory Leak Detector](kmemleak.md)
  - [Usage](kmemleak.md#usage)
  - [Basic Algorithm](kmemleak.md#basic-algorithm)
  - [Testing specific sections with kmemleak](kmemleak.md#testing-specific-sections-with-kmemleak)
  - [Freeing kmemleak internal objects](kmemleak.md#freeing-kmemleak-internal-objects)
  - [Kmemleak API](kmemleak.md#kmemleak-api)
  - [Dealing with false positives/negatives](kmemleak.md#dealing-with-false-positives-negatives)
  - [Limitations and Drawbacks](kmemleak.md#limitations-and-drawbacks)
  - [Testing with kmemleak-test](kmemleak.md#testing-with-kmemleak-test)
- [Kernel Concurrency Sanitizer (KCSAN)](kcsan.md)
  - [Usage](kcsan.md#usage)
  - [Data Races](kcsan.md#data-races)
  - [Race Detection Beyond Data Races](kcsan.md#race-detection-beyond-data-races)
  - [Implementation Details](kcsan.md#implementation-details)
  - [Alternatives Considered](kcsan.md#alternatives-considered)
- [Kernel Electric-Fence (KFENCE)](kfence.md)
  - [Usage](kfence.md#usage)
  - [Implementation Details](kfence.md#implementation-details)
  - [Interface](kfence.md#interface)
  - [Related Tools](kfence.md#related-tools)
- [Linux Kernel Selftests](kselftest.md)
  - [Documentation on the tests](kselftest.md#documentation-on-the-tests)
  - [Running the selftests (hotplug tests are run in limited mode)](kselftest.md#running-the-selftests-hotplug-tests-are-run-in-limited-mode)
  - [Running a subset of selftests](kselftest.md#running-a-subset-of-selftests)
  - [Running the full range hotplug selftests](kselftest.md#running-the-full-range-hotplug-selftests)
  - [Install selftests](kselftest.md#install-selftests)
  - [Running installed selftests](kselftest.md#running-installed-selftests)
  - [Timeout for selftests](kselftest.md#timeout-for-selftests)
  - [Packaging selftests](kselftest.md#packaging-selftests)
  - [Contributing new tests](kselftest.md#contributing-new-tests)
  - [Contributing new tests (details)](kselftest.md#contributing-new-tests-details)
  - [Test Module](kselftest.md#test-module)
  - [Test Harness](kselftest.md#test-harness)
- [KUnit - Linux Kernel Unit Testing](kunit/index.md)
  - [Getting Started](kunit/start.md)
  - [KUnit Architecture](kunit/architecture.md)
  - [Running tests with kunit_tool](kunit/run_wrapper.md)
  - [Run Tests without kunit_tool](kunit/run_manual.md)
  - [Writing Tests](kunit/usage.md)
  - [Common Patterns](kunit/usage.md#common-patterns)
  - [API Reference](kunit/api/index.md)
  - [Test Style and Nomenclature](kunit/style.md)
  - [Frequently Asked Questions](kunit/faq.md)
  - [Tips For Running KUnit Tests](kunit/running_tips.md)
  - [Introduction](kunit/index.md#introduction)
  - [Unit Testing](kunit/index.md#unit-testing)
  - [How do I use it?](kunit/index.md#how-do-i-use-it)
- [The Kernel Test Anything Protocol (KTAP), version 1](ktap.md)
  - [Version lines](ktap.md#version-lines)
  - [Plan lines](ktap.md#plan-lines)
  - [Test case result lines](ktap.md#test-case-result-lines)
  - [Diagnostic lines](ktap.md#diagnostic-lines)
  - [Unknown lines](ktap.md#unknown-lines)
  - [Nested tests](ktap.md#nested-tests)
  - [Major differences between TAP and KTAP](ktap.md#major-differences-between-tap-and-ktap)
  - [Example KTAP output](ktap.md#example-ktap-output)
  - [See also:](ktap.md#see-also)
- [UAPI Checker](checkuapi.md)
  - [Options](checkuapi.md#options)
  - [Examples](checkuapi.md#examples)
  - [Caveats](checkuapi.md#caveats)
- [Linux Kernel GPIO based sloppy logic analyzer](gpio-sloppy-logic-analyzer.md)
  - [Introduction](gpio-sloppy-logic-analyzer.md#introduction)
  - [Setup](gpio-sloppy-logic-analyzer.md#setup)
  - [Usage](gpio-sloppy-logic-analyzer.md#usage)
- [Using AutoFDO with the Linux kernel](autofdo.md)
  - [Preparation](autofdo.md#preparation)
  - [Customization](autofdo.md#customization)
  - [Workflow](autofdo.md#workflow)
- [Using Propeller with the Linux kernel](propeller.md)
  - [Preparation](propeller.md#preparation)
  - [Customization](propeller.md#customization)
  - [Workflow](propeller.md#workflow)
